# codingagent

./: LICENSE  README.md  pyproject.toml
autogen/: README.md  coding_agent.py  orchestrator.py  reviewer_agent.py  test_suite_agent.py
crewai/engineering_team/: README.md  pyproject.toml
crewai/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
crewai/engineering_team/src/engineering_team/: crew.py  main.py
crewai/engineering_team/src/engineering_team/config/: agents.yaml
